Fix logo not showing, add dimensions for main img

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
 .logo-img {
 	width:40px;
 	height: 81px;
-	background: url('cakelogo.png');
+	background-image: url("cakelogo.png");
 }
 
 .content {
@@ -28,6 +28,8 @@ body {
 
 .main-img {
 	background-image: url("eclairs3.jpg");
+	height: 965px;
+	width: 490px;
 }
 
 .footer {
